--- a/Setting.plist
+++ b/Setting.plist
@@ -128,7 +128,7 @@
 	<key>17</key>
 	<array>
 		<string>购买固定资产，投资艺术品，筹谋策划，拜财神，祭拜先人，与高层领导会面</string>
-		<string观荷赏莲，去湿地、沼泽，临时起意决策，拜观音，男性不宜与两少女聚会></string>
+		<string>观荷赏莲，去湿地、沼泽，临时起意决策，拜观音，男性不宜与两少女聚会</string>
 		<string> 卦名：大畜
              全名：山天大畜
              卦符：艮上乾下
