--- a/rigua.plist
+++ b/rigua.plist
@@ -86,8 +86,8 @@
 	</array>
 	<key>15</key>
 	<array>
-		<string>领养宠物，洗浴放松身心</string>
-		<string>赌博娱乐，算命问卜，一事两做</string>
+		<string>幕后谋划，SPA放松身心，情人约会，妇科保健，领养宠物、关爱幼儿，向女领导请示汇报</string>
+		<string>赌博娱乐，算命问卜，反复做事，今日去河南</string>
 		<string> 卦名：小畜
              全名：风天小畜
              卦符：巽上乾下
@@ -276,8 +276,8 @@
 	</array>
 	<key>26</key>
 	<array>
-		<string>疏通关系，结婚</string>
-		<string>旅游，动中求财，装饰、装修，饮酒作乐</string>
+		<string>疏通关系，领结婚证，节流，徜徉竹林，鱼塘垂钓，食竹笋、甘蔗</string>
+		<string>出行，装饰、装修，酗酒，美容、美发、美甲</string>
 		<string> 卦名：节
              全名：水泽节
              卦符：坎上兑下
@@ -465,8 +465,8 @@
 	</array>
 	<key>37</key>
 	<array>
-		<string>装修，美容美发美甲，旅游</string>
-		<string>钓鱼，去池塘边以及竹林边</string>
+		<string>出行，装修，装饰，美容美发美甲</string>
+		<string>钓鱼，去池塘边以及竹林边，疏通关系，领结婚证，食竹笋、甘蔗</string>
 		<string> 卦名：贲
              全名：山火贲
              卦符：艮上离下
@@ -647,8 +647,8 @@
 	</array>
 	<key>48</key>
 	<array>
-		<string>一事两办，复婚</string>
-		<string>出国，与女领导交流，收养小动物，结婚领证</string>
+		<string>去政府部门办事，预测、占卜，反复做事，今日去河南</string>
+		<string>向女领导汇报请示，接近小动物，幕谋划，与情人约会，妇科检查，SPA</string>
 		<string> 卦名：复
              全名：地雷复
              卦符：坤上震下
@@ -667,8 +667,8 @@
 	</array>
 	<key>51</key>
 	<array>
-		<string>出国，与女领导交流，清扫</string>
-		<string>一事两办，复婚，做恢复事</string>
+		<string>向女领导汇报工作，与情人约会，幕后谋划，SPA放松身心，妇科保健，关爱诱饵、宠物</string>
+		<string>去政府部门办事，预测、占卜，反复做事，今日去河南</string>
 		<string> 卦名：姤
              全名：天风姤
              卦符：乾上巽下
@@ -852,8 +852,8 @@
 	</array>
 	<key>62</key>
 	<array>
-		<string>钓鱼，贷款</string>
-		<string>装修，旅游</string>
+		<string>招商引资，解决困难，疏通关系，领证结婚，节流，徜徉竹林，鱼塘垂钓，食竹笋、甘蔗</string>
+		<string>出行，装饰、装修，酗酒，美容、美发、美甲</string>
 		<string> 卦名：困
              全名：泽水困
              卦符：兑上坎下
@@ -1023,8 +1023,8 @@
 	</array>
 	<key>73</key>
 	<array>
-		<string></string>
-		<string></string>
+		<string>出行，装修，美容、美发、美甲</string>
+		<string>疏通关系，领证结婚，去竹林，鱼塘钓鱼，食竹笋、甘蔗</string>
 		<string> 卦名：旅
              全名：火山旅
              卦符：离上艮下
@@ -1199,8 +1199,8 @@
 	</array>
 	<key>84</key>
 	<array>
-		<string>计划预谋，恢复、修复</string>
-		<string>领养宠物，幕后谋划，与年长女性交流</string>
+		<string>去政府部门办事，预测、占卜，反复做事，今日去河南</string>
+		<string>接近小动物，幕后谋划，向女领导汇报请示，情人约会，妇科检查，SPA</string>
 		<string> 卦名：豫
              全名：雷地豫
              卦符：震上坤下
