--- a/Setting.plist
+++ b/Setting.plist
@@ -795,8 +795,8 @@
 	</array>
 	<key>57</key>
 	<array>
-		<string></string>
-		<string></string>
+        <string>古装电影，、历史剧，媒体发布会，技术讨论，讲故事，向领导汇报请示</string>
+        <string>相亲，闺蜜聚会，回老家省亲，追逐流行时尚，与官员往来</string>
 		<string> 卦名：蛊
              全名：山风蛊
              卦符：艮上巽下
@@ -871,8 +871,8 @@
 	</array>
 	<key>63</key>
 	<array>
-		<string>长线投资，求财</string>
-		<string>现金交易，短线投资，泡温泉</string>
+		<string>古装电影，、历史剧，媒体发布会，技术讨论，讲故事，向领导汇报请示</string>
+		<string>相亲，闺蜜聚会，回老家省亲，追逐流行时尚，与官员往来</string>
 		<string> 卦名：未济
              全名：火水未济
              卦符：离上坎下
@@ -985,8 +985,8 @@
 	</array>
 	<key>71</key>
 	<array>
-		<string></string>
-		<string></string>
+		<string>购买固定资产，递交辞呈，筹谋策划，拜财神，与高层领导会面</string>
+		<string>拜观音，临时起意，观荷赏莲，去湿地、沼泽，跳舞、体育活动、临摹</string>
 		<string> 卦名：遁
              全名：天山遁
              卦符：乾上艮下
