--- a/Setting.plist
+++ b/Setting.plist
@@ -795,8 +795,8 @@
 	</array>
 	<key>57</key>
 	<array>
-        <string>古装电影，、历史剧，媒体发布会，技术讨论，讲故事，向领导汇报请示</string>
-        <string>相亲，闺蜜聚会，回老家省亲，追逐流行时尚，与官员往来</string>
+		<string>古装电影，、历史剧，媒体发布会，技术讨论，讲故事，向领导汇报请示</string>
+		<string>相亲，闺蜜聚会，回老家省亲，追逐流行时尚，与官员往来</string>
 		<string> 卦名：蛊
              全名：山风蛊
              卦符：艮上巽下
@@ -871,8 +871,8 @@
 	</array>
 	<key>63</key>
 	<array>
-		<string>古装电影，、历史剧，媒体发布会，技术讨论，讲故事，向领导汇报请示</string>
-		<string>相亲，闺蜜聚会，回老家省亲，追逐流行时尚，与官员往来</string>
+		<string>长线投资，求财</string>
+		<string>金钱交易，短线投资</string>
 		<string> 卦名：未济
              全名：火水未济
              卦符：离上坎下
