风大撒发生
反对撒风

--- a/Setting.plist
+++ b/Setting.plist
@@ -795,7 +795,7 @@
 	</array>
 	<key>57</key>
 	<array>
-		<string>古装电影，、历史剧，媒体发布会，技术讨论，讲故事，向领导汇报请示</string>
+		<string>看古装电影、历史剧，媒体发布会，技术讨论，讲故事，向领导汇报请示</string>
 		<string>相亲，闺蜜聚会，回老家省亲，追逐流行时尚，与官员往来</string>
 		<string> 卦名：蛊
              全名：山风蛊
